--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "crypto-js": "^3.3.0"
+    "bip32": "^2.0.6",
+    "bitcoinjs-lib": "^5.1.6",
+    "crypto-js": "^3.3.0",
+    "jsontokens": "^3.0.0"
   },
   "repository": {
     "type": "git",
